<resources>
    <string name="app_name">Coronavirus Application</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="username_text">Name</string>
    <string name="country_input_hint">Enter Country</string>
    <string name="view_chart_button_text">View Chart</string>
    <string name="search_button_text">Search</string>
    <string name="login_button_text">Login</string>
    <string name="register_account_button_text">Register Account</string>
    <string name="enter_country_prompt">Enter a Country Below</string>
    <string name="star_description">Star Icon</string>
    <string name="coronavirus_news_api_key">93478700a1f841e89f67f723afcdf9c1</string>
</resources>
