<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFDBB5"
    tools:context=".CoronavirusSearchActivity">

    <TextView
        android:id="@+id/searchHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_country_prompt"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        />

    <EditText
        android:id="@+id/countryInput"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:inputType="text"
        android:background="@drawable/edit_text_style"
        android:hint="@string/country_input_hint"
        />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_style"
        android:layout_marginTop="20dp"
        android:text="@string/search_button_text"
        android:textSize="18sp"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:textAllCaps="false"
        />

    <TextView
        android:id="@+id/resultsTextView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textColor="#000000"
        android:textSize="20sp"
    />

    <Button
        android:id="@+id/chartButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_style"
        android:layout_marginTop="20dp"
        android:text="@string/view_chart_button_text"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:textAllCaps="false"
        />


</LinearLayout>